# stm32G4xx_base_rust_project

./: Cargo.toml  STM32G431xx.svd  stm32g4x.cfg
src/: main.rs
src/utils/: logger.rs
